Inventory form added to products page. Code to add inventory item created.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -34,7 +34,7 @@
         });
 
     </script>
-<!--    <script style="display: none;">
+    <script style="display: none;">
         $(document).ready(function() {
             $("#sel_subcat").children('option:gt(0)').hide();
             $("#sel_style").children('div:gt(0)').hide();
@@ -46,7 +46,7 @@
             })
         })
     </script>
--->
+
     <script style="display: none;">
         $(document).ready(function() {
             $("#sel_product").children('option:gt(0)').hide();
