--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -246,114 +246,8 @@ a .admin_menu_button:hover {
 
 /************ ADD PRODUCT ************/
 
-.add_form, .add_ItemForm {
-    display: none;
-    margin: 0 30px;
-    background-color: #ffffff;
-    height: 250px;
-    border-bottom: 2px solid #606060;
-    border-left: 0.5px solid #606060;
-    border-right: 0.5px solid #606060;
-    border-radius: 0 0 15px 15px;
-}
-
-#add_product, #add_item {
-    border-bottom: 2px solid #606060;
-    height: 40px;
-    font-weight: bold;
-    font-size: 26px;
-    margin: -60px 30px 0;
-    padding-top: 8px;
-}
-
-#add_item {
-    margin-top: 0;
-}
-
-#add_product i, #add_item i {
-    margin-top: -28px;
-    margin-left: 753px;
-    position: absolute;
-    display: block;
-}
-
 .hidden_slc {
     display: none;
-}
-
-.sel_image, .sel_name, .sel_submit {
-    display: block;
-    position: absolute;
-    height: 40px;
-    margin-top: 95px;
-    margin-left: 3px;
-    border: 0;
-    border-bottom: 1.5px solid #606060;
-    font-size: 20px;
-    width: 773px;
-}
-
-.sel_name {
-    margin-top: 135px;
-}
-
-#sel_style, #sel_color {
-    width: 780px;
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    margin-top: 60px;
-    justify-content: space-around;
-}
-
-#sel_style div, #sel_style div input, #sel_style div div {
-    display: inline-block;
-}
-
-#sel_style div div {
-    font-weight: bold;
-    margin-top: -1px;
-}
-
-#sel_style div input {
-    width: 20px;
-    height: 20px;
-    border: 1px solid black;
-}
-
-.sel_submit {
-    margin-top: 185px;
-    border: 2px solid #72bcd4;
-    border-radius: 15px;
-    background-image: linear-gradient(to bottom right, #72bcd4, #add8e6);
-    color: #ffffff;
-}
-
-.sel_submit:hover {
-    border: 2px solid #add8e6;
-    background-image: linear-gradient(to bottom right, #61abc3, #bee9f7);
-}
-
-#style_title {
-    display: flex;
-    position: absolute;
-    margin-top: 32px;
-    font-weight: bold;
-    font-size: 20px;
-    width: 778px;
-    justify-content: space-around;
-}
-
-.selection {
-    border: 0;
-    border-bottom: 1.5px solid black;
-    width: 380px;
-    height: 30px;
-    margin-left: 3px;
-    font-size: 18px;
-    font-weight: bold;
-    position: absolute;
-    display: inline-block;
 }
 
 .prodTitle {
@@ -383,13 +277,135 @@ a .admin_menu_button:hover {
     margin-left: 70px;
 }
 
-/********** PRODUCT COLOR CHOICES **********/
+/************* ADD  PRODUCT *************/
 
-#sel_color {
-    margin-top: 20px;
+#add_product, #add_item {
+    border-bottom: 2px solid #606060;
+    height: 40px;
+    font-weight: bold;
+    font-size: 26px;
+    margin: -60px 30px 0;
+    padding-top: 8px;
 }
 
-#sel_color input {
+#add_product i, #add_item i {
+    margin-top: -28px;
+    margin-left: 753px;
+    position: absolute;
+    display: block;
+}
+
+.add_form, .add_ItemForm {
+    display: none;
+    margin: 0 30px;
+    background-color: #ffffff;
+    height: 250px;
+    border-bottom: 2px solid #606060;
+    border-left: 0.5px solid #606060;
+    border-right: 0.5px solid #606060;
+    border-radius: 0 0 15px 15px;
+}
+
+.selection {
+    border: 0;
+    border-bottom: 1.5px solid black;
+    width: 380px;
+    height: 30px;
+    margin-left: 3px;
+    font-size: 18px;
+    font-weight: bold;
+    position: absolute;
+    display: inline-block;
+}
+
+#sel_cat {}
+
+#sel_subcat {}
+
+#style_title, #color_title, #size_title {
+    display: flex;
+    position: absolute;
+    margin-top: 32px;
+    font-weight: bold;
+    font-size: 20px;
+    width: 778px;
+    justify-content: space-around;
+}
+
+#sel_style, #sel_color, #sel_size {
+    width: 780px;
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    margin-top: 60px;
+    justify-content: space-around;
+}
+
+#sel_style div, #sel_style div input, #sel_style div div {
+    display: inline-block;
+}
+
+#sel_style div div {
+    font-weight: bold;
+    margin-top: -1px;
+}
+
+#sel_style div input {
+    width: 20px;
+    height: 20px;
+    border: 1px solid black;
+}
+
+.sel_image, .sel_name, .sel_submit, .sel_image2, .sel_name2, .sel_submit2, .sel_price {
+    display: block;
+    position: absolute;
+    height: 40px;
+    margin-top: 95px;
+    margin-left: 3px;
+    border: 0;
+    border-bottom: 1.5px solid #606060;
+    font-size: 20px;
+    width: 773px;
+}
+
+.sel_name {
+    margin-top: 135px;
+}
+
+.sel_submit, .sel_submit2 {
+    margin-top: 185px;
+    border: 2px solid #72bcd4;
+    border-radius: 15px;
+    background-image: linear-gradient(to bottom right, #72bcd4, #add8e6);
+    color: #ffffff;
+}
+
+.sel_submit:hover, .sel_submit2:hover {
+    border: 2px solid #add8e6;
+    background-image: linear-gradient(to bottom right, #61abc3, #bee9f7);
+}
+
+/********** ADD INVENTORY ITEM **********/
+
+#add_item {
+    margin-top: 0;
+}
+
+.add_ItemForm {
+    height: 300px;
+}
+
+#sel_catSubcat {}
+
+#sel_product {}
+
+#color_title {}
+
+#sel_color {
+    margin-top: 60px;
+}
+
+#sel_color input, #sel_size input {
     margin:0;
     padding: 0;
     -webkit-appearance:none;
@@ -397,11 +413,15 @@ a .admin_menu_button:hover {
             appearance:none;
 }
 
-#sel_color label {
+#sel_color label, #sel_size label {
     cursor:pointer;
 }
 
-.radio_color {
+#sel_color input:checked + .radio_color, #sel_size input:checked + .radio_size {
+    border: 2px solid #ffcc00;
+}
+
+.radio_color, .radio_size {
     border: 1px solid black;
     width: 27px;
     height: 27px;
@@ -410,6 +430,41 @@ a .admin_menu_button:hover {
     background-position: center;
 }
 
-#sel_color input:checked + .radio_color {
-    border: 2px solid #ffcc00;
+#size_title {
+    margin-top: 90px;
 }
+
+#sel_size {
+    margin-top: 120px;
+}
+
+.radio_size {
+    height: 18px;
+    display: block;
+    font-weight: bold;
+    font-size: 9px;
+    font-family: sans-serif;
+    padding-top: 10px;
+    text-align: center;
+}
+
+.sel_image2 {
+    margin-top: 165px;
+    border: 0;
+}
+
+.sel_name2, .sel_price {
+    margin-top: 205px;
+    margin-left: 60px;
+    width: 450px;
+}
+
+.sel_price {
+    width: 150px;
+    margin-left: 570px;
+}
+
+.sel_submit2 {
+    margin-top: 255px;
+}
+
