--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -16,7 +16,7 @@
                     <option value="">-- Choose Category --</option>
                     <option th:each="cat : ${categories}" th:value="${cat.id}" th:id="${'cat' + cat.id}" th:text="${cat.name}"></option>
                 </select>
-                <select class="selection " id="sel_subcat" name="typeId" required="required" style="margin-left: 395px;">
+                <select class="selection" id="sel_subcat" name="typeId" required="required" style="margin-left: 395px;">
                     <option value="">-- Choose Sub-Category --</option>
                     <div th:each="cat : ${categories}">
                     <option th:name="${cat.id}" th:each="type : ${cat.types}" th:value="${type.id}" th:text="${type.name}"></option>
@@ -37,32 +37,40 @@
 
         <div id="add_item">ADD ITEM TO INVENTORY <i class="far fa-caret-square-down"></i></div>
         <div class="add_ItemForm">
-            <form th:action="@{'/data/add/product'}" method="post" enctype="multipart/form-data">
+            <form th:action="@{'/data/add/item'}" method="post" enctype="multipart/form-data">
                 <select class="selection" id="sel_catSubcat" name="typeId" required="required">
                     <option value="">-- Choose Category / Sub-Category --</option>
                     <div th:each="cat : ${categories}">
                         <option th:each="subCat : ${cat.types}" th:value="${subCat.id}" th:id="${'subCat' + subCat.id}" th:text="${cat.name + ': ' + subCat.name}"></option>
                     </div>
                 </select>
-                <select class="selection " id="sel_product" name="typeId" required="required" style="margin-left: 395px;">
+                <select class="selection " id="sel_product" name="productId" required="required" style="margin-left: 395px;">
                     <option value="">-- Choose Product --</option>
                     <option th:each="product : ${products}" th:name="${product.type.id}" th:value="${product.id}" th:text="${product.name}"></option>
                 </select>
                 <div id="color_title">Choice Color</div>
                 <div id="sel_color">
                     <div th:each="color : ${colors}">
-                        <input required="required" type="radio" th:alt="${color.name}" name="colorId" th:id="${'color-' + color.id}" th:value="${color.id}" />
+                        <input required="required" type="radio" name="colorId" th:id="${'color-' + color.id}" th:value="${color.id}" />
                         <label class="radio_color" th:for="${'color-' + color.id}" th:style="|background-color: ${color.hex}; background-image: url(/upload/image/${color.url});|" />
                     </div>
                 </div>
-                <input class="sel_image" type="file" accept="image/*" name="file" />
-                <input class="sel_name" required="required" type="text" name="name" placeholder="Name of product" />
-                <input class="sel_submit" type="submit" value="Add Product" />
+                <div id="size_title">Choice Size</div>
+                <div id="sel_size">
+                    <div th:each="size : ${sizes}">
+                        <input type="checkbox" name="sizeIds" th:id="${'size-' + size.id}" th:value="${size.id}" />
+                        <label class="radio_size" th:for="${'size-' + size.id}" th:text="${size.shortName}" />
+                    </div>
+                </div>
+                <input class="sel_image2" type="file" accept="image/*" name="file" />
+                <input class="sel_name2" required="required" type="text" name="sku" placeholder="SKU (prefix)" />
+                <input class="sel_price" required="required" type="number" name="price" placeholder="price ($)" />
+                <input class="sel_submit2" type="submit" value="Add Product" />
             </form>
         </div>
 
         <div th:each="cat : ${categories}"><div th:each="type : ${cat.types}"><span th:id="${'pDiv' + cat.id + '-' + type.id}" class="prodTitle" th:text="${cat.name + ' - ' + type.name}"></span>
-            <div th:class="${'cDiv' + cat.id + '-' + type.id}" style="/* display: none; */" th:each="product : ${type.products}">
+            <div th:class="${'cDiv' + cat.id + '-' + type.id}" th:each="product : ${type.products}">
                 <div class="listItem productList" style="background-color: #effcff;">
                     <i class="far fa-image productImage" th:if="${product.imageId != 0}"></i>
                     <div class="oneItem productOne"><span th:text="${product.name}"></span><a th:href="${'products/archive/' + product.id}">ARCHIVE</a></div>
@@ -80,10 +88,6 @@
                     </div>
                 </div>
 
-
-                <!--
-
-
                 <script style="display: none;" th:inline="javascript">
                     $(document).ready(function(){
                         $('#pDiv[[${cat.id}]]-[[${type.id}]]').click(function() {
@@ -92,25 +96,11 @@
                     });
                 </script>
 
-
-                -->
-
-
                 <div class="subItem">
-                    inventory:
-                    <div th:each="item : ${inventory}">
-                        <div th:if="${item.hidden == 'no'}">
-                            <form th:action="${'products/inventory/' + item.id + '/hidden/yes'}" method="post">
-                                <input type="submit" value="&#8864;" style="border: 0; background: none;" />
-                            </form>
-                        </div>
-                        <div th:if="${item.hidden == 'yes'}">
-                            <form th:action="${'products/inventory/' + item.id + '/hidden/no'}" method="post">
-                                <input type="submit" value="&#9744;" style="border: 0; background: none;" />
-                            </form>
-                        </div>
-                        <div th:text="${item.name}"></div>
-                        <div style="font-size: 8px;"><a th:href="${'products/inventory/' + item.id + '/archive/' + product.id}">A</a></div>
+                    <div th:each="item : ${product.inventory}">
+                        <i class="fas fa-palette" th:each="color : ${colors}" th:if="${color.id == item.colorId}" th:style="|color: ${color.hex}; text-shadow: 1px 1px black;|"></i>
+                        <div th:each="size : ${sizes}" th:if="${size.id == item.sizeId}" th:text="${size.longName + ' - $' + item.price + '0'}"></div>
+                        <div style="font-size: 8px;"><a th:href="${'products/inventory/' + item.id + '/archive/' + product.id}">A</a><br /></div>
                     </div>
                 </div>
             </div>
