--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -96,13 +96,23 @@
                     });
                 </script>
 
-                <div class="subItem">
-                    <div th:each="item : ${product.inventory}">
-                        <i class="fas fa-palette" th:each="color : ${colors}" th:if="${color.id == item.colorId}" th:style="|color: ${color.hex}; text-shadow: 1px 1px black;|"></i>
-                        <div th:each="size : ${sizes}" th:if="${size.id == item.sizeId}" th:text="${size.longName + ' - $' + item.price + '0'}"></div>
-                        <div style="font-size: 8px;"><a th:href="${'products/inventory/' + item.id + '/archive/' + product.id}">A</a><br /></div>
+                <div th:each="color : ${colors}">
+                    <div th:each="size : ${sizes}">
+                        <div th:each="item, iStat : ${product.inventory}" th:if="${color.id == item.colorId}">
+                            <div class="subItem blockIt" th:if="${size.id == item.sizeId}" th:style="${iStat.odd}? 'background-color: #f3f2f2;'">
+                                <i class="fas fa-palette" th:style="|color: ${color.hex}; text-shadow: 1px 1px black; margin-top: 2px;|"></i>
+                                <div th:text="${'&nbsp; ' + size.longName + ' - $' + item.price + '0'}"></div>
+                                <div style="font-size: 8px;"><a th:href="${'products/inventory/' + item.id + '/archive/' + product.id}">A</a><br /></div>
+                                <form th:action="@{/data/update/quantity}" method="post">
+                                    <input type="hidden" name="itemId" th:value="${item.id}" />
+                                    <input class="quant_input" name="quantity" type="number" th:placeholder="${item.quantity}" />
+                                    <input class="quant_submit" type="submit" value="update" />
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
             </div>
         </div></div>
 
