removed force Google login.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -66,7 +66,7 @@
             <div class="divide txt_white">|</div>
             <div class="link txt_white">Contact</div>
             <div class="divide txt_white">|</div>
-            <a th:href="@{'/user'}"><div class="link txt_white">Login</div></a>
+            <div class="link txt_white">Login</div>
         </div>
         <div id="cart">
             <i class="fas fa-shopping-cart cart"></i>
