featured products now show price range and image of product. Products can only be featured if in stock.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,17 +12,17 @@
   <div class="section_full">
 
     <p th:unless="${featured} and ${featured.size()}"><strong>No Featured Products</strong></p>
-
-    <div class="product" th:each="product : ${featured}">
-      <div class="product_img"></div>
-      <div class="product_des"><span th:text="${product.name}">TITLE</span><strong th:text="'$' + ${product.type.id}">$17.00</strong></div>
+    <div class="product" th:each="products : ${featured}">
+        <div th:each="product : ${products}"><div th:each="price : ${product.value}">
+            <div class="product_img" th:style="${'background-image: url(/upload/image/' + photos[product.key.imageId].url + ');'}"></div>
+            <div class="product_des"><span th:text="${product.key.name}">TITLE</span><strong th:text="'$' + ${price.key + '0 - $' + price.value + '0'}">$17.00</strong></div>
+        </div></div>
     </div>
-
   </div>
 
   <div th:each="category : ${menuItems}">
       <div class="section_full">
-        <span class="title1" th:text="${category.name}">category</span>
+        <a th:href="'/store/' + ${category.name}" class="title1" th:text="${category.name}" style="text-decoration: none;">category</a>
           <span class="title2" th:each="type : ${category.types}">
              <a th:href="'/store/' + ${category.name} + '/' + ${type.name}" th:text="'&nbsp;&nbsp;' + ${type.name} + '&nbsp;&nbsp;'"></a>
           </span><br />
