--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,9 +20,9 @@
 
   <div th:each="category : ${menuItems}">
       <div class="section_full">
-        <a th:href="'/store/' + ${category.name}" class="title1" th:text="${category.name}" style="text-decoration: none;">category</a>
+        <a th:href="'/store/' + ${#strings.replace(category.name, ' ', '_')}" class="title1" th:text="${category.name}" style="text-decoration: none;">category</a>
           <span class="title2" th:each="type : ${category.types}">
-             <a th:href="'/store/' + ${category.name} + '/' + ${type.name}" th:text="'&nbsp;&nbsp;' + ${type.name} + '&nbsp;&nbsp;'"></a>
+             <a th:href="'/store/' + ${#strings.replace(category.name, ' ', '_')} + '/' + ${#strings.replace(type.name, ' ', '_')}" th:text="'&nbsp;&nbsp;' + ${type.name} + '&nbsp;&nbsp;'"></a>
           </span><br />
           <div th:each="product : ${products}" style="display: inline-block;">
               <div class="product" th:if="${product.categoryId == category.id}">
