--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
       <p th:unless="${featured} and ${featured.size()}"><strong>No Featured Products</strong></p>
       <div class="product" th:each="product : ${featured}">
           <div class="product_img" th:style="${'background-image: url(/upload/image/' + product.imageUrl + ');'}"></div>
-          <div class="product_des"><span th:text="${product.name}">TITLE</span><strong th:text="'$' + ${product.minPrice + ' - $' + product.maxPrice}" th:unless="${product.minPrice == product.maxPrice}">$17.00</strong><strong th:text="'$' + ${product.minPrice}" th:if="${product.minPrice == product.maxPrice}">$17.00</strong></div>
+          <div class="product_des"><a th:href="@{'/store/product/' + ${product.productId}}" th:text="${product.name}" style="text-decoration: none;">TITLE</a><strong th:text="'$' + ${product.minPrice + ' - $' + product.maxPrice}" th:unless="${product.minPrice == product.maxPrice}">$17.00</strong><strong th:text="'$' + ${product.minPrice}" th:if="${product.minPrice == product.maxPrice}">$17.00</strong></div>
       </div>
   </div>
 
@@ -27,7 +27,7 @@
           <div th:each="product : ${products}" style="display: inline-block;" th:if="${product.categoryId == category.id}">
               <div class="product">
                   <div class="product_img" th:style="${'background-image: url(/upload/image/' + product.imageUrl + ');'}"></div>
-                  <div class="product_des"><span th:text="${product.name}">TITLE</span><strong th:text="'$' + ${product.minPrice + ' - $' + product.maxPrice}" th:unless="${product.minPrice == product.maxPrice}">$17.00</strong><strong th:text="'$' + ${product.minPrice}" th:if="${product.minPrice == product.maxPrice}">$17.00</strong></div>
+                  <div class="product_des"><a th:href="@{'/store/product/' + ${product.productId}}" th:text="${product.name}" style="text-decoration: none;">TITLE</a><strong th:text="'$' + ${product.minPrice + ' - $' + product.maxPrice}" th:unless="${product.minPrice == product.maxPrice}">$17.00</strong><strong th:text="'$' + ${product.minPrice}" th:if="${product.minPrice == product.maxPrice}">$17.00</strong></div>
               </div>
           </div>
       </div>
