working on login.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -102,7 +102,7 @@
             <div class="link txt_white">Contact</div>
             <div class="divide txt_white">|</div>
             <div class="link txt_white container unauthenticated">
-                Login with <a href="/login/facebook">Facebook</a><a href="/login/github">Github</a>
+                <a href="/login">Login</a>
             </div>
             <div class="link txt_white container authenticated" style="display: none;">
                 <div style="color: #ffffff;" id="user"></div>
