--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -85,6 +85,7 @@
                                 <input type="submit" value="&#9744;" />
                             </form>
                         </div>
+                        <div style="display: block; position: absolute; width: 200px; text-align: right; margin: -24px 0 0 560px;"><a th:href="${'/data/add/descriptions/' + product.id}" th:text="${'Add/Modify Descriptions'}"></a></div>
                     </div>
                 </div>
 
