--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -115,6 +115,7 @@
             <i class="fas fa-shopping-cart cart"></i>
             <span class="cart">Your Cart</span>
         </div>
+        <!-- <div class="cart_total" th:text="${cartCnt}" th:if="${cartCnt > 0}"></div> -->
         <div id="title" class="txt_white" th:text="${title}">PAGE NAME</div>
         <form>
             <div id="search_area" class="flex-row"><i class="fas fa-search"></i><input type="text" name="q" placeholder="Search..." /></div>
