--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,36 +1,25 @@
-<c:set var="contextPath" value="${pageContext.request.contextPath}"/>
+<c:set var="contextPath" value="${pageContext.request.contextPath}"
+       xmlns:c="http://www.springframework.org/schema/util"/>
 
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-      <meta charset="utf-8" />
-      <title>Log-in</title>
-
-      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
-      <link href="/css/common.css" rel="stylesheet" />
-  </head>
-
-  <body>
-
-    <div class="container">
-      <form method="POST" action="/login" class="form-signin">
-        <h2 class="form-heading">Log in</h2>
-
-        <div class="form-group ${error != null ? 'has-error' : ''}">
-            <span>${message}</span>
-            <input name="username" type="text" class="form-control" placeholder="Username"
-                   autofocus="true"/>
-            <input name="password" type="password" class="form-control" placeholder="Password"/>
-            <span>${error}</span>
-            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Log In</button>
-            <h4 class="text-center"><a href="${contextPath}/registration">Create an account</a></h4>
-        </div>
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<head th:replace="fragments :: head">
+</head>
+<body>
+<div th:replace="fragments :: header"></div>
+<div class="section_full">
+    <form th:action="@{/login}" method="post">
+        <h2>Log in</h2>
+        <span th:text="${message}"></span>
+        <div class="login_form"><input name="username" type="text" placeholder="Username" autofocus="true" /></div>
+        <div class="login_form"><input name="password" type="password" placeholder="Password" /></div>
+        <span th:text="${error}"></span>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+        <div class="login_form"><button class="btn btn-lg btn-primary btn-block" type="submit">Log In</button></div>
+        <h4 class="text-center"><a th:href="@{'/registration'}">Create an account</a></h4>
       </form>
     </div>
+<div th:replace="fragments :: footer"></div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  </body>
+</body>
 </html>
