--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -459,31 +459,100 @@
 
 /********** LOGIN / REGISTRATION **********/
 
-.login_form {
-    width: 400px;
-    display: block;
-    margin: 0 auto;
+.onOff {display: none;}
+
+.closeLogin {
+    position: absolute;
+    font-size: 32px;
+    top: 5px;
+    right: 5px;
+    background-color: #ff0000;
+    border-radius: 50%;
+    color: #000000;
+}
+
+.closeLogin:hover {
+    background-color: #ff6666;
+}
+
+.dim {
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+    z-index: 200;
+    width: 100%;
+    height: 100%;
+    opacity: 0.6;
+    background-color: #a9a9a9;
+}
+
+.login_container {
+    width: 500px;
+    height: 250px;
+    background-color: #ffffff;
+    position: fixed;
+    border: 2px solid #656565;
+    border-radius: 15px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 300;
     text-align: center;
 }
-
-.login_form input {
+.login_container .title {
+    font-size: 36px;
+    font-weight: bold;
     width: 400px;
-    padding-left: 5px;
-    border: 0;
-    border-bottom: 1px solid #949494;
-    font-size: 22px;
-    margin-bottom: 5px;
+    padding-bottom: 3px;
+    margin: 0 auto 5px;
 }
 
-.login_form input:focus {
+.login_container input {
+    width: 400px;
+    padding-left: 5px;
+    border: 2px solid #949494;
+    border-radius: 10px;
+    background-color: #ffffff;
+    font-size: 22px;
+    margin: 0 auto 10px;
+}
+
+.login_container input:focus {
     outline: none;
     border-bottom: 2px solid #000000;
 }
 
-.login_form button {
-    width: 400px;
+.login_container button {
+    width: 410px;
+    height: 40px;
     font-size: 22px;
     font-weight: bold;
     border: 2px solid #606060;
-    border-radius: 4px;
+    border-radius: 10px;
+    margin: 15px auto 0;
+}
+
+.google, .facebook, .twitter, .github {
+    margin: 20px 15px 0;
+    font-size: 36px;
+}
+
+.google:hover {
+    color: #4285f4;
+}
+
+.facebook:hover {
+    color: #3c5a99;
+}
+
+.twitter:hover {
+    color: #1da1f2;
+}
+
+.github:hover {
+    color: #4078c0;
 }
