--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -488,7 +488,7 @@
     background-color: #a9a9a9;
 }
 
-.login_container {
+#login_container {
     width: 500px;
     height: 250px;
     background-color: #ffffff;
@@ -503,15 +503,16 @@
     z-index: 300;
     text-align: center;
 }
-.login_container .title {
+#login_container .title {
+    text-decoration: underline;
     font-size: 36px;
     font-weight: bold;
-    width: 400px;
+    width: 470px;
     padding-bottom: 3px;
     margin: 0 auto 5px;
 }
 
-.login_container input {
+#login_container input {
     width: 400px;
     padding-left: 5px;
     border: 2px solid #949494;
@@ -521,12 +522,12 @@
     margin: 0 auto 10px;
 }
 
-.login_container input:focus {
+#login_container input:focus {
     outline: none;
     border-bottom: 2px solid #000000;
 }
 
-.login_container button {
+#login_container button {
     width: 410px;
     height: 40px;
     font-size: 22px;
