--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -87,6 +87,20 @@
             return true;
         }
 
+        var regForm = function() {
+            $(".login_form").hide();
+            $(".registration_form").show();
+            document.getElementById('login_container').style.height = '300px';
+            return true;
+        }
+
+        var logForm = function() {
+            $(".login_form").show();
+            $(".registration_form").hide();
+            document.getElementById('login_container').style.height = '250px';
+            return true;
+        }
+
         $.ajaxSetup({
             beforeSend : function(xhr, settings) {
                 if (settings.type == 'POST' || settings.type == 'PUT' || settings.type == 'DELETE') {
@@ -140,22 +154,35 @@
             </span>
         </div>
     </div>
+
     <div class="onOff">
         <div class="dim"></div>
-        <div class="login_container">
+        <div id="login_container">
             <i class="far fa-times-circle closeLogin" onclick="closeLogin()"></i>
-            <div class="title">Login</div>
-            <form>
-                <input type="text" name="email" />
-                <input type="password" name="password" />
-                <button type="submit">Login</button>
-            </form>
+            <div class="login_form">
+                <div class="title">Login<span onclick="regForm()" style="display: inline-block; text-decoration: none;">/Register</span></div>
+                <form th:action="${'/data/login?return=' + returnPath}" method="post">
+                    <input type="text" name="email" placeholder="email" />
+                    <input type="password" name="password" placeholder="password" />
+                    <button type="submit">Login</button>
+                </form>
+            </div>
+            <div class="registration_form" style="display: none;">
+                <div class="title"><span onclick="logForm()" style="display: inline-block; text-decoration: none;">Login/</span>Register</div>
+                <form th:action="${'/data/register?return=' + returnPath}" method="post">
+                    <input type="text" name="email" placeholder="email" />
+                    <input type="password" name="password" placeholder="password" />
+                    <input type="password" name="confirmPassword" placeholder="confirm password" />
+                    <button type="submit">Register</button>
+                </form>
+            </div>
             <i class="fab fa-google google"></i>
             <i class="fab fa-facebook-f facebook"></i>
             <i class="fab fa-twitter twitter"></i>
             <i class="fab fa-github-alt github"></i>
         </div>
     </div>
+
 </div>
 
 
