--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -161,18 +161,20 @@
             <i class="far fa-times-circle closeLogin" onclick="closeLogin()"></i>
             <div class="login_form">
                 <div class="title">Login<span onclick="regForm()" style="display: inline-block; text-decoration: none;">/Register</span></div>
-                <form th:action="${'/data/login?return=' + returnPath}" method="post">
-                    <input type="text" name="email" placeholder="email" />
-                    <input type="password" name="password" placeholder="password" />
+                <form th:action="${'/data/login'}" method="post">
+                    <input type="hidden" name="returnPath" th:value="${returnPath}" />
+                    <input type="text" name="email" placeholder="email" required="required" />
+                    <input type="password" name="password" placeholder="password" required="required" />
                     <button type="submit">Login</button>
                 </form>
             </div>
             <div class="registration_form" style="display: none;">
                 <div class="title"><span onclick="logForm()" style="display: inline-block; text-decoration: none;">Login/</span>Register</div>
-                <form th:action="${'/data/register?return=' + returnPath}" method="post">
-                    <input type="text" name="email" placeholder="email" />
-                    <input type="password" name="password" placeholder="password" />
-                    <input type="password" name="confirmPassword" placeholder="confirm password" />
+                <form th:action="${'/data/register'}" method="post">
+                    <input type="hidden" name="returnPath" th:value="${returnPath}" />
+                    <input type="text" name="email" placeholder="email" required="required" />
+                    <input type="password" name="password" placeholder="password" required="required" />
+                    <input type="password" name="confirmPassword" placeholder="confirm password" required="required" />
                     <button type="submit">Register</button>
                 </form>
             </div>
